# client-server-chat

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: client.cpp.E68CB0EE728F33EF.idx  main.cpp.9AB69CFAEEC98B50.idx  server.cpp.E1E8C2B9A9AAF3B1.idx
.cursor/rules/: github-deploy.mdc
include/: client.hpp  server.hpp
src/: client.cpp  server.cpp
